--- a/css/common.css
+++ b/css/common.css
@@ -34,7 +34,6 @@ ul {
   margin-bottom: 24px;
 }
 .item-header {
-  font-family: 'Montserrat', sans-serif;
   font-weight: 600;
   font-size: 24px;
   line-height: 1.33333;
@@ -50,7 +49,6 @@ ul {
   border-radius: 4px;
   padding: 8px 0 8px 16px;
 
-  font-family: 'Montserrat', sans-serif;
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -59,6 +57,9 @@ ul {
 }
 .category-item:not(:last-child) {
   margin-bottom: 8px;
+}
+.gallery {
+  margin-top: 20px;
 }
 .gallery-img {
   max-width: 100%;
@@ -84,9 +85,151 @@ ul {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+  align-items: flex-start;
   flex-wrap: wrap;
   gap: 44px;
   border-radius: 8px;
   padding: 32px;
   background-color: #f6f6fe;
+}
+
+.controls-container {
+  border-radius: 8px;
+  padding: 32px;
+  background-color: #f6f6fe;
+  margin-bottom: 16px;
+  margin-top: 16px;
+}
+
+.input {
+  border: 1px solid #808080;
+  border-radius: 8px;
+  width: 150px;
+  height: 40px;
+  background-color: transparent;
+  outline: transparent;
+  text-align: center;
+  margin-right: 16px;
+}
+
+.btn {
+  border: 1px solid;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 120px;
+  height: 40px;
+  text-align: center;
+  margin-right: 16px;
+  background: #4e75ff;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.btn.destroy-btn {
+  background: #ff4e4e;
+  margin-right: 0;
+}
+
+.label {
+  display: block;
+  margin-bottom: 8px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+.input-log-form {
+  display: block;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  background-color: transparent;
+  outline: transparent;
+  padding-left: 10px;
+}
+
+.log-btn {
+  border: transparent;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 86px;
+  height: 40px;
+  background: #4e75ff;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+  text-align: center;
+}
+
+.label:nth-child(2) {
+  margin-bottom: 16px;
+}
+.go-back-text {
+  margin-bottom: 20px;
+}
+
+.login-form {
+  margin-top: 20px;
+}
+
+.name-input {
+  display: block;
+  padding-left: 16px;
+  margin-top: 20px;
+  margin-bottom: 16px;
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 360px;
+  height: 40px;
+  background-color: transparent;
+  outline: transparent;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.change-color {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
+  gap: 10px;
+  cursor: pointer;
+  border: none;
+  border-radius: 8px;
+  padding: 8px 16px;
+  width: 148px;
+  height: 40px;
+  background: #4e75ff;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+}
+
+.widget {
+  margin-top: 20px;
+}
+.text-color {
+  margin-bottom: 16px;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
 }
